syntax = "proto3";
package sample.scheduler.model;

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "scalapb/scalapb.proto";

enum ScheduleType {
    SIMPLE = 0;
    CRON = 1;
}

message Key {
    string group = 1;
    string name = 2;
}

message TriggerSchedule {
    ScheduleType type = 1;
    google.protobuf.StringValue interval = 2;
    // 大于0指定重复次数，小于等于0无限执行
    google.protobuf.Int32Value repeatCount = 3;
    google.protobuf.Int32Value misfireInstruction = 4;
    google.protobuf.StringValue cronExpression = 5;
    google.protobuf.StringValue timezone = 6;
    google.protobuf.StringValue startAt = 7;
    google.protobuf.Int32Value triggerPriority = 8;
}

message JobDTO {
    string group = 1;
    google.protobuf.StringValue description = 2;
    // $$callback$$ 为内置key，此参数设置任务执行时要操作的回调地址
    map<string, string> data = 3;
    TriggerSchedule schedule = 4;
    // 是否持久化Job，默认为true。当Job为非持久化时，若没有任何trigger关联再Job将被自动删除。
    google.protobuf.BoolValue durable = 5;
}

message JobBO {
    string group = 1;
    string name = 2;
    string description = 3;
    map<string, string> data = 4;
    repeated JobTriggerBO triggers = 5;
    int64 createdAt = 6;
}

message JobTriggerDTO {
    string group = 1;
    Key jobKey = 2;
    TriggerSchedule schedule = 3;
    google.protobuf.StringValue startAt = 4;
    google.protobuf.Int32Value triggerPriority = 7;
}

message JobTriggerBO {
    string group = 1;
    string name = 2;
    Key jobKey = 3;
    TriggerSchedule schedule = 4;
    int64 createdAt = 5;
    // 已被触发（执行）次数
    int64 timesTriggered = 6;
    // 下一次触发时间
    int64 nextFireTime = 7;
    // 上一次触发时间
    int64 previousFireTime = 8;
    int64 endTime = 9;
}

// 1. 停止triggerKey指定的调度
// 2. 停止jobKey关联的所有调度
message JobCancelDTO {
    Key triggerKey = 1;
    Key jobKey = 2;
}

message JobPauseDTO {
    Key triggerKey = 1;
    Key jobKey = 2;
}

message JobResumeDTO {
    Key triggerKey = 1;
    Key jobKey = 2;
}

message JobQueryDTO {
    Key triggerKey = 1;
    Key jobKey = 2;
}

message JobGetDTO {
    Key in = 1;
}

message ApiResult {
    int32 status = 1;
    string msg = 2;
    google.protobuf.Any data = 3;
    int64 ctime = 4;
}
